[package]
name = "wasm-be-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4"
sea-orm = {version = "0.12.7", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros", "mock"]}
entity = { path = "entity" }
migration = { path = "migration" }
